Closed Bug 1760726 Opened 2 years ago Closed 2 years ago

Failed webgl.linkProgram on CURRENT_PROGRAM should cause draws to fail

Categories

(Core :: Graphics: CanvasWebGL, defect, P3)

defect

Tracking

()

RESOLVED FIXED
100 Branch
Tracking Status
firefox100 --- fixed

People

(Reporter: jgilbert, Assigned: jgilbert)

References

Details

Attachments

(1 file)

WebGL spec was changed from the GL-like behavior here:
https://github.com/KhronosGroup/WebGL/pull/3371

Summary: Failed webgl.linkProgram on CURRENT_PROGRAM should un-useProgram. → Failed webgl.linkProgram on CURRENT_PROGRAM should cause draws to fail
Pushed by jgilbert@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/0160dbf5c11d
Failed webgl.linkProgram on CURRENT_PROGRAM should cause draws to fail. r=gfx-reviewers,lsalzman
Status: NEW → RESOLVED
Closed: 2 years ago
Resolution: --- → FIXED
Target Milestone: --- → 100 Branch
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: