Bug 1760726 - Failed webgl.linkProgram on CURRENT_PROGRAM should cause draws to fail. r=gfx-reviewers,lsalzman

Hack tests to test new behavior.
Eventually we'll take the full updates with a full CTS update.

Differential Revision: https://phabricator.services.mozilla.com/D141708